2010-07-01  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: do not error out on a shape with zero vertices.

	* shpdump.c: do not crash if null shape returned by read object.

2010-06-29  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: fix sign of Z and M comparisons in SHPCheckObjectContained.
	(http://bugzilla.maptools.org/show_bug.cgi?id=2223)

2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c/shapefil.h: Handle the .shp file length limits more
	gracefully. (http://trac.osgeo.org/gdal/ticket/3236)

	* shpopen.c: Improve the numerical accurancy of algorithms in
	SHPRewind() (http://trac.osgeo.org/gdal/ticket/3363).

2010-01-16  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: support passing in zero/nulls to create an empty
	SHPObject: http://bugzilla.maptools.org/show_bug.cgi?id=2148

2009-10-29  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: avoid crash risk for truncated files.
	http://trac.osgeo.org/gdal/ticket/3093

2009-09-17  Bram de Greve <bram.degreve@bramz.net>

	* shpopen.c: on Win32, define snprintf as alias to _snprintf

2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: improve safety in face of buggy .shp file.
	http://trac.osgeo.org/gdal/ticket/2610

	* dbfopen.c: DBFCreateField() can now also operate on files with
	records, c/o Martin Dobias.
	https://trac.osgeo.org/gdal/ticket/2672

2008-11-11  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Introduce DBFDeleteField() function from Martin Dobias.
	http://trac.osgeo.org/gdal/ticket/2671

2008-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Correct crash on buggy geometries (Even Rouault).
	http://trac.osgeo.org/gdal/ticket/2218

2008-01-16  Bram de Greve <bram.degreve@bramz.net>

	* shapefil.h, safileio.c:  add file hooks that accept UTF-8
	encoded filenames on some platforms.  Use SASetupUtf8Hooks
	to setup the hooks and check SHPAPI_UTF8_HOOKS for its
	availability.  Currently, this is only available on the Windows